k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: postgres
    template:
        metadata:
            name: postgres
            labels:
                component: postgres
        spec:
            volumes:
                - name: postgres-storage                             # Name of the Volume
                  persistentVolumeClaim:
                    claimName: database-persistent-volume-claim      # Name of the PVC
            containers:
                - name: postgres
                  image: postgres
                  ports:
                    - containerPort: 5432
                  volumeMounts:
                    - name: postgres-storage                         # Mapped to the Volume Name
                      mountPath: /var/lib/postgresql/data            
                      subPath: postgres
