k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: web
    ports:
        - port: 3000                   # Pod Port on which the Application is listening. This can be used by other Pods to access this applicaiton inside the same Node.
          targetPort: 3000             # Container Port on which the Application in listening inside the Pod.
